HIPP-1425: Fix styling on banner with overflowing text (#120)

--- a/app/assets/stylesheets/_custom.scss
+++ b/app/assets/stylesheets/_custom.scss
@@ -437,13 +437,17 @@ pre {
       margin-bottom: 0;
       margin-top: 40px;
     }
-    &__content:not(.white-space-unset) {
+    &__content {
       white-space: nowrap;
     }
     &-spacing {
       display: block;
     }
   }
+}
+
+.white-space-unset {
+  white-space: unset !important;
 }
 
 .govuk-custom-padding-right {
